Add swag docs for list creation/addition
