# backend/routes/methods_user.go
@@ -161,6 +161,9 @@ func (h *Handler) UserLikeOnGet(w http.ResponseWriter, r *http.Request) {
 // @Summary Handle following a user
 // @Description Toggles whether a user is following a second user
 // @Tags User
+// @Accept json
+// @Procude json
+// @Param follow body types.UserFollowPayload true "Follow toggle payload"
 // @Success 200
 // @Failure 400 {string} error "Error describing failure"
 // @Router /follow [post]
@@ -231,6 +234,16 @@ func (h *Handler) UserFollowOnGet(w http.ResponseWriter, r *http.Request) {
 	utils.WriteJSON(w, http.StatusOK, users)
 }
 
+// @Summary Create new list for user
+// @Description Creates a new list for a user
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param list body types.UserListCreatePayload true "List create payload"
+// @Success 201
+// @Failure 400 {string} error "Error describing failure"
+// @Failure 500 {string} error "Internal server error"
+// @Router /listcreate [post]
 func (h *Handler) ListCreateOnPost(w http.ResponseWriter, r *http.Request) {
 	var payload types.UserListCreatePayload
 	if err := utils.ParseJSON(r, &payload); err != nil {
@@ -253,6 +266,16 @@ func (h *Handler) ListCreateOnPost(w http.ResponseWriter, r *http.Request) {
 	utils.WriteJSON(w, http.StatusCreated, list)
 }
 
+// @Summary Add/Remove concert from a list
+// @Description Adds or removes a concert from a given list. When concert doesn't exist, it is added. If concert exists, it is deleted.
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param listconcert body types.UserListAddPayload true "List and concert IDs"
+// @Success 201
+// @Failure 400 {string} error "Error describing failure"
+// @Failure 500 {string} error "Internal server error"
+// @Router /listadd [post]
 func (h *Handler) ListAddOnPost(w http.ResponseWriter, r *http.Request) {
 	var payload types.UserListAddPayload
 	if err := utils.ParseJSON(r, &payload); err != nil {
@@ -266,7 +289,7 @@ func (h *Handler) ListAddOnPost(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	if err := h.Store.AddList(payload); err != nil {
+	if err := h.Store.ToggleList(payload); err != nil {
 		utils.WriteError(w, http.StatusInternalServerError, err)
 		return
 	}
