# backend/types/concerto_store_interface.go
@@ -25,5 +25,5 @@ type Store interface {
 	GetActivityFeed(int64, int64) ([]UserPostGetResponse, error)
 	GetFollowersOrFollowing(int64, string, int64) ([]UserFollowGetResponse, error)
 	CreateList(UserListCreatePayload) (*List, error)
-	AddList(UserListAddPayload) error
+	ToggleList(UserListAddPayload) error
 }
